# oidc-rs

./: Cargo.toml
src/: lib.rs
src/config/: authentication.rs  caching.rs  cors.rs  discovery.rs  endpoints.rs  events.rs  input_length.rs  mod.rs  user_interaction.rs
src/endpoints/: authorize.rs  mod.rs  token.rs  user_info.rs
src/models/: api_resource.rs  authorisation_code.rs  claim.rs  claims_identity.rs  client.rs  consent.rs  discovery_document.rs  identity_resource.rs  mod.rs  resource.rs  scope.rs  secret.rs  token.rs
src/models/reference/: constants.rs  grant_type.rs  jwt_claim_type.rs  mod.rs  protocol_type.rs  token_type.rs
src/services/: mod.rs  profile.rs  token_creation.rs
src/tests/: models.rs
src/tests/common/: mod.rs
src/utils/: enum_parse_error.rs  mod.rs
